<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AddEvent</string>
    <string name="b_login">Log In</string>
    <string name="b_signup">Sign Up</string>
    <string name="t_username">email@uncc.edu</string>
    <string name="t_password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="t_birthyear">Birthyear</string>
    <string name="t_zipcode">Zipcode</string>
    <string name="r_male">Male</string>
    <string name="r_female">Female</string>
    <string name="c_term_agreement">Terms and Conditions</string>
    <string name="title_of_signup">Name of the App</string>
    <string name="b_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_enter_event">EnterEventActivity</string>
    <string name="t_name_event">Name of Event</string>
    <string name="t_location">Location</string>
    <string name="t_information">Information</string>
    <string name="b_submitEvent">Submit</string>

</resources>
