<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jpalaci5.addevent.SignUp"
    android:background="#ecb5b500"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="278dp"
        android:layout_height="484dp"
        android:layout_gravity="center"
        android:clickable="false"
        android:background="#ffffffff">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"

            android:hint="@string/t_username"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/t_password"
            android:layout_below="@+id/email"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/birthYear"
            android:hint="@string/t_birthyear"
            android:layout_below="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/zipcode"
            android:hint="@string/t_zipcode"
            android:layout_below="@+id/birthYear"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_of_signup"
            android:id="@+id/title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_register"
            android:id="@+id/bSignUp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp" />



        </RelativeLayout>

</FrameLayout>