<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AddEventActivity"
    android:background="#1b609b">

    <RelativeLayout
        android:layout_width="242dp"
        android:layout_height="387dp"
        android:layout_gravity="center"
        android:background="#ffffffff">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/t_username"
            android:layout_above="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/t_password"
            android:layout_alignBottom="@+id/bLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_login"
            android:id="@+id/bLogin"
            android:layout_marginTop="185dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_signup"
            android:id="@+id/bSignUp"
            android:layout_below="@+id/bLogin"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/title"
            android:text="@string/title_of_signup"
            android:layout_marginTop="26dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        </RelativeLayout>

</FrameLayout>
